# wikiquote-haskell

./: LICENSE  README.md  wikiquote.cabal
app/: Main.hs  Notify.hs  Quote.hs
