cabal-version: 3.0

name: wikiquote

version: 0.1.0.0

synopsis:

-- description:

homepage:

-- bug-reports:

license: MIT

license-file: LICENSE

author: shootingstar

maintainer: jinhung.c@gmail.com

-- copyright:

-- category:

extra-source-files: README.md

executable wikiquote
    main-is: Main.hs

    other-modules: Notify, Quote

    other-extensions: ForeignFunctionInterface CApiFFI OverloadedStrings

    build-depends: base ^>=4.14.3.0, http-conduit ^>= 2.3.8, tagsoup ^>= 0.14.8, bytestring ^>= 0.11.1.0, text ^>= 1.2.5.0, base64-bytestring ^>= 1.2.1.0, temporary ^>= 1.3, time ^>= 1.9.3

    include-dirs: /usr/include/gdk-pixbuf-2.0 /usr/include/glib-2.0 /usr/lib64/glib-2.0/include /usr/include/libmount /usr/include/blkid

    extra-libraries: pthread notify gdk_pixbuf-2.0 gio-2.0 gobject-2.0 glib-2.0

    hs-source-dirs: app

    default-language: Haskell2010